change url remote

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "jpf-core"]
 	path = jpf-core
-	url = https://github.com/vananhnt/jpf-core.git
+	url = ../jpf-core.git
 [submodule "jpf-symbc"]
 	path = jpf-symbc
-	url = git@github.com:vananhnt/jpf-symbc.git
+	url = ../jpf-symbc.git
